syntax = "proto3";
package pb;

option go_package = "github.com/denistakeda/mpass/proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service MpassService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc AddRecords(AddRecordsRequest) returns (google.protobuf.Empty);
}

message SignUpRequest {
  string login = 1;
  string password = 2;
}

message SignUpResponse {
  string token = 1;
}

message SignInRequest {
  string login = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
}

message AddRecordsRequest {
  repeated Record records = 1;
}

message Record {
  string id = 1;
  google.protobuf.Timestamp lastUpdateDate = 2;

  oneof record {
    LoginPasswordRecord loginPasswordRecord = 3;
    TextRecord textRecord = 4;
    BinaryRecord binaryRecord = 5;
    BankCardRecord bankCardRecord = 6;
  }
}

message LoginPasswordRecord {
  string login = 1;
  string password = 2;
}

message TextRecord {
  string text = 1;
}

message BinaryRecord {
  bytes binary = 1;
}

message BankCardRecord {
  string card_code = 1;
  uint32 month = 2;
  uint32 day = 3;
  uint32 code = 4;
}
